<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DeleteSpamMessage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spam_remove">Spam SMS Deletion</string>
    <string name="filter_from">Block SMS From</string>
    <string name="submit">Submit</string>
    <string name="Saved">Saved</string>
    <string name="title_activity_spam_sms">SpamSMS</string>
    <string name="Clear">Clear</string>
    <string name="show_blocked_sms">Show Blocked SMS</string>
    <string name="whitelist_from">WhiteList Number</string>
    <string name="spam_filter_folder">SpamFilterFolder</string>
    <string name="spam_filter_file">SpamFilter.txt</string>
    <string name="whitelist_file">WhiteListFilter.txt</string>
    <string name="discardedMessage_file">DiscardedMsg.txt</string>
    <string name="refresh">Refresh</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>

</resources>
